Mon Apr 11 15:24:20 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (configuration): shouldn't output hdrdir twice.

Sat Apr  9 18:20:31 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/image.rb: support to create TkImage object without
	  creating a new image object on Tk.

	* ext/tk/lib/tk/menu.rb: use TkCommandNames on create_self()

	* ext/tk/lib/tk/root.rb: TkRoot.to_eval() returns '.'.

	* ext/tk/lib/tk/text.rb: add methods to create a TkText::IndexString
	  from (x, y) coords.

	* ext/tk/lib/tkextlib/tile/: add demo and update support status.

Sat Apr  9 14:42:29 2005  Kouhei Sutou  <kou@cozmixng.org>

	* sample/rss/tdiary_plugin/rss-recent.rb: supported configuration
	  via Web browser.

Fri Apr  8 20:17:48 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): hdrdir needs to be defined also in
	  Config::CONFIG.

	* lib/mkmf.rb (configuration, create_makefile): get rid of recursive
	  macro reference.

Fri Apr  8 01:55:20 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/sample/demos-{en,jp}/goldberg.rb: reduced window size.
	  [ruby-dev:25992]

Thu Apr  7 23:58:40 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): keep directory names in Makefile as macros.

	* lib/mkmf.rb (configuration, create_makefile): ditto.

	* lib/mkmf.rb (CXX_EXT): separate C++ extensions.

Thu Apr  7 17:24:17 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_call0): "return" event hook should be always executed
	  if event_hooks is set.

Thu Apr  7 14:33:09 2005  Kouhei Sutou  <kou@cozmixng.org>

	* test/rss/test_maker_dc.rb (test_date): added a test for #date=
	  and #dc_date=.

Thu Apr  7 11:49:53 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/dublincore.rb: _really_ supported multiple Dublin
	  Core items.

	* test/rss/rss-assertions.rb (assert_multiple_dublin_core): added
	  an assertion for testing multiple Dublin Core items.
